[package]
name = "ic-wasi-polyfill"
version = "0.3.9"
edition = "2021"


[dependencies]
ic-cdk = "0.8"
ic-stable-structures = "0.5.4"
stable-fs = { git = "https://github.com/demergent-labs/stable-fs", rev = "fe5f31f5e9f91a81289f0c4a48ccdc96bbe08ca9" }
rand = "0.8.5"
function_name = "0.3.0"

[features]
transient=[]
report_wasi_calls=[]


[lib]
crate-type = ["staticlib","lib"]
