[package]
name = "ic-wasi-polyfill"
version = "0.3.9"
edition = "2021"


[dependencies]
ic-cdk = "0.8"
ic-stable-structures = "0.5.4"
stable-fs = { git = "https://github.com/demergent-labs/stable-fs", rev = "f85a7919c7468552ec6aa123f80634ebf168093c" }
rand = "0.8.5"
function_name = "0.3.0"

[features]
transient=[]
report_wasi_calls=[]


[lib]
crate-type = ["staticlib","lib"]
